Fix send-form z-index

--- a/public/styles/send-form.styl
+++ b/public/styles/send-form.styl
@@ -6,6 +6,7 @@
   padding 0.25em
   position fixed
   width 100%
+  z-index 9999
   textarea
     margin 0
     max-width 100%
